<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_video_call"
        android:icon="@drawable/ic_call"
        android:title="@string/video_call"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_conference"
        android:icon="@drawable/ic_videocam_on"
        android:title="@string/conference"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/action_pinned_messages"
        android:icon="@drawable/ic_pin"
        android:title="@string/pinned_messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_custom"
        android:title="@string/search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mute_chat"
        android:icon="@drawable/ic_mute"
        android:title="@string/mute_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_self_destruct"
        android:icon="@drawable/ic_delete_sweep"
        android:title="@string/self_destruct_timer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_history"
        android:icon="@drawable/ic_delete_sweep"
        android:title="@string/clear_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_chat"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_chat"
        app:showAsAction="never" />
</menu>
