<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryContainer">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_custom"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        android:textColor="?attr/colorOnPrimaryContainer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update"
        android:title="@string/update"
        android:textColor="?attr/colorOnPrimaryContainer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:textColor="?attr/colorOnPrimaryContainer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_super_admin"
        android:title="@string/super_admin"
        android:visible="false"
        android:textColor="?attr/colorOnPrimaryContainer"
        app:showAsAction="never" />

</menu>
