<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_pin"
        android:title="@string/action_pin"
        android:icon="@drawable/ic_lock"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mute"
        android:title="@string/action_mute"
        android:icon="@drawable/ic_volume_off"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive"
        android:title="@string/action_archive"
        android:icon="@drawable/ic_file_archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>
